--- a/sandee website.html
+++ b/sandee website.html
@@ -15,12 +15,14 @@
             background-color: #73bcc5;
             color: white;
                     } 
-
-    .jersey-15-regular {
-        font-family: "Jersey 15", serif;
-        font-weight: 500;
-        font-style: normal;
-    }
+        .jersey-15-regular {
+            font-family: "Jersey 15", serif;
+            font-weight: 500;
+            font-style: normal;
+                             }
+        .bg-color {
+            background-color: #daf5f9 ;
+        }
                   
     </style>
 
@@ -30,5 +32,8 @@
         </h1>
     </div>
 </head>
+<body class = "bg-color">
+    
+</body>
 
 </html>
