--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="custom-bg">
 
-        <div class ="poppins-medium menu-spacing" style="padding-top: 40px; padding-right:80px ; text-align: right;";>
+        <div class ="poppins-medium menu-spacing" style="padding-top: 40px; padding-right:80px ; text-align: right; color: white;">
            <a href="sandee.html.html"> Home</a>
            <a href="page2.html.html"> Progress</a>
            <a href="page3.html">Team</a>
