--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="custom-bg">
 
-        <div class ="poppins-medium menu-spacing" style="padding-top: 40px; padding-right:80px ; text-align: right; color: white;">
+        <div class ="poppins-medium menu-spacing menu-padding" style="color: white;">
            <a href="sandee.html.html"> Home</a>
            <a href="page2.html.html"> Progress</a>
            <a href="page3.html">Team</a>
@@ -26,7 +26,7 @@
             by Freshmore Students SUTD
             </div>
 
-        <div class="poppins-medium" style=" padding-left: 80px; color: white   ;">
+        <div class="poppins-new" style=" padding-left: 80px; color: white   ;">
             This project combinines engineering creativity to create a machine to tackle <br>
             environmental problems. Together, we're making a difference for a sustainable future.    
             </div>
