--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
 <body>
     <div class="custom-bg">
 
-        <div class ="poppins-medium menu-spacing menu-padding" style="color: white;">
-           <a href="sandee.html.html"> Home</a>
+        <div class ="poppins-medium menu-setting" style="color: white;">
+           <a href="index.html"> Home</a>
            <a href="page2.html.html"> Progress</a>
            <a href="page3.html">Team</a>
            <a href="cadangan.html">Contact</a>
             </div>
 
-        <div class="poppins-thick">
+        <div class="poppins-thick padding1">
             Beach Cleaning Robot Project <br>
             by Freshmore Students SUTD
             </div>
 
-        <div class="poppins-new" style=" padding-left: 80px; color: white   ;">
+        <div class="poppins-new padding1" style="color: white   ;">
             This project combinines engineering creativity to create a machine to tackle <br>
             environmental problems. Together, we're making a difference for a sustainable future.    
             </div>
