--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <div class ="poppins-medium menu-setting" style="color: white;">
            <a href="index.html"> Home</a>
-           <a href="page2.html.html"> Progress</a>
+           <a href="page2.html"> Progress</a>
            <a href="page3.html">Team</a>
            <a href="cadangan.html">Contact</a>
             </div>
