--- a/page2.html
+++ b/page2.html
@@ -18,8 +18,8 @@
 <body>
     <div class="custom-bg1">
          <div class ="poppins-medium menu-spacing" style="padding-top: 40px; padding-right:80px ; text-align: right; color: black";>
-           <a href="sandee.html"> Home</a>
-           <a href="page2.html.html"> Progress</a>
+           <a href="index.html"> Home</a>
+           <a href="page2.html"> Progress</a>
            <a href="page3.html">Team</a>
            <a href="cadangan.html">Contact</a>
             </div>
