--- a/page3.html
+++ b/page3.html
@@ -8,29 +8,134 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link href="css/styles.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="screen.css   ">
+    
 <body>
+     <header class="masthead custom-bgpage3">
+            <div class="poppins-thick3 padding1">
+                Introducing the Team !
+                </div>
+            <div class="poppins-new padding1" style="color: white;">
+                The group consists of blabla people that developed Sand-E from its original state
+                </div>
+
+        </header>
     <section class="testimonials text-center bg-light">
-            <div class="container">
-                <h2 class="mb-5">What people are saying...</h2>
-                <div class="row">
+            <div class="row padding2" >
                     <div class="col-lg-4">
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                            <img class="img-fluid rounded-circle mb-3" src="assets/img/testimonials-1.jpg" alt="..." />
-                            <h5>Margaret E.</h5>
-                            <p class="font-weight-light mb-0">"This is fantastic! Thanks so much guys!"</p>
+                            <img class="img-fluid rounded-circle mb-3" src="picture/vincent.jpg"/>
+                            <h5>Vincent Ho</h5>
+                            <p class="font-weight-light mb-0">Project leader</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                            <img class="img-fluid rounded-circle mb-3" src="assets/img/testimonials-2.jpg" alt="..." />
-                            <h5>Fred S.</h5>
+                            <img class="img-fluid rounded-circle mb-3" src="picture/bryan willson.jpg">
+                            <h5>Bryan Willson Chandra</h5>
+                            <p class="font-weight-light mb-0"> bryansutd06@gmail.com</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+                            <img class="img-fluid rounded-circle mb-3" src="picture/vincent.jpg" alt="..." />
+                            <h5>Puah Joon Leng</h5>
+                            <p class="font-weight-light mb-0">"Thanks so much for making these free resources available to us!"</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+             <div class="row" >
+                    <div class="col-lg-4">
+                        <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+                            <img class="img-fluid rounded-circle mb-3" src="picture/vincent.jpg"/>
+                            <h5>Sri</h5>
+                            <p class="font-weight-light mb-0">empty</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+                            <img class="img-fluid rounded-circle mb-3" src="picture/vincent.jpg" alt="..." />
+                            <h5>Patrick</h5>
                             <p class="font-weight-light mb-0">"Bootstrap is amazing. I've been using it to create lots of super nice landing pages."</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                            <img class="img-fluid rounded-circle mb-3" src="assets/img/testimonials-3.jpg" alt="..." />
-                            <h5>Sarah W.</h5>
+                            <img class="img-fluid rounded-circle mb-3" src="picture/vincent.jpg" alt="..." />
+                            <h5>Nicholas</h5>
+                            <p class="font-weight-light mb-0">"Thanks so much for making these free resources available to us!"</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row" >
+                    <div class="col-lg-4">
+                        <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+                            <img class="img-fluid rounded-circle mb-3" src="picture/vincent.jpg"/>
+                            <h5>Dhyeya</h5>
+                            <p class="font-weight-light mb-0">Project leader</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+                            <img class="img-fluid rounded-circle mb-3" src="picture/vincent.jpg" alt="..." />
+                            <h5>Lim Nguyen Ping, Bryan</h5>
+                            <p class="font-weight-light mb-0">"Bootstrap is amazing. I've been using it to create lots of super nice landing pages."</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+                            <img class="img-fluid rounded-circle mb-3" src="picture/vincent.jpg" alt="..." />
+                            <h5>Tan Yu Jie</h5>
+                            <p class="font-weight-light mb-0">"Thanks so much for making these free resources available to us!"</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row" >
+                    <div class="col-lg-4">
+                        <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+                            <img class="img-fluid rounded-circle mb-3" src="picture/vincent.jpg"/>
+                            <h5>Lim Xin En Vera</h5>
+                            <p class="font-weight-light mb-0">Project leader</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+                            <img class="img-fluid rounded-circle mb-3" src="picture/vincent.jpg" alt="..." />
+                            <h5>Wong Chai ning</h5>
+                            <p class="font-weight-light mb-0">"Bootstrap is amazing. I've been using it to create lots of super nice landing pages."</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+                            <img class="img-fluid rounded-circle mb-3" src="picture/Audrey.jpg" alt="..." />
+                            <h5>Audrey Dominique </h5>
+                            <p class="font-weight-light mb-0">audreydominique19@gmail.com</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row" >
+                    <div class="col-lg-4">
+                        <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+                            <img class="img-fluid rounded-circle mb-3" src="picture/vincent.jpg"/>
+                            <h5>Joon ooi</h5>
+                            <p class="font-weight-light mb-0">Project leader</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+                            <img class="img-fluid rounded-circle mb-3" src="picture/vincent.jpg" alt="..." />
+                            <h5>Audrey Dominique </h5>
+                            <p class="font-weight-light mb-0">"Bootstrap is amazing. I've been using it to create lots of super nice landing pages."</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+                            <img class="img-fluid rounded-circle mb-3" src="picture/vincent.jpg" alt="..." />
+                            <h5>Lim Xin En Vera</h5>
                             <p class="font-weight-light mb-0">"Thanks so much for making these free resources available to us!"</p>
                         </div>
                     </div>
