--- a/page3.html
+++ b/page3.html
@@ -12,7 +12,14 @@
     
 <body>
      <header class="masthead custom-bgpage3">
-            <div class="poppins-thick3 padding1">
+
+        <div class ="poppins-medium menu-spacing" style=" padding-right:80px ; text-align: right; color: white";>
+           <a href="index.html"> Home</a>
+           <a href="page2.html"> Progress</a>
+           <a href="page3.html">Team</a>
+           <a href="cadangan.html">Contact</a>
+            </div>
+            <div class="poppins-thick3 padding1" style="padding-top: 100px;">
                 Introducing the Team !
                 </div>
             <div class="poppins-new padding1" style="color: white;">
@@ -45,7 +52,7 @@
                     </div>
                 </div>
             </div>
-             <div class="row" >
+             <div class="row padding2" >
                     <div class="col-lg-4">
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
                             <img class="img-fluid rounded-circle mb-3" src="picture/vincent.jpg"/>
@@ -69,7 +76,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row" >
+            <div class="row padding2" >
                     <div class="col-lg-4">
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
                             <img class="img-fluid rounded-circle mb-3" src="picture/vincent.jpg"/>
@@ -93,19 +100,19 @@
                     </div>
                 </div>
             </div>
-            <div class="row" >
+            <div class="row padding2" >
                     <div class="col-lg-4">
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
                             <img class="img-fluid rounded-circle mb-3" src="picture/vincent.jpg"/>
                             <h5>Lim Xin En Vera</h5>
-                            <p class="font-weight-light mb-0">Project leader</p>
+                            <p class="font-weight-light mb-0">veralimxe05@gmail.com</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
                             <img class="img-fluid rounded-circle mb-3" src="picture/vincent.jpg" alt="..." />
-                            <h5>Wong Chai ning</h5>
-                            <p class="font-weight-light mb-0">"Bootstrap is amazing. I've been using it to create lots of super nice landing pages."</p>
+                            <h5>Wong Chai Ning</h5>
+                            <p class="font-weight-light mb-0">chaining_wong@mymail.sutd.edu.sg</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -117,7 +124,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row" >
+            <div class="row padding2" >
                     <div class="col-lg-4">
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
                             <img class="img-fluid rounded-circle mb-3" src="picture/vincent.jpg"/>
@@ -127,14 +134,14 @@
                     </div>
                     <div class="col-lg-4">
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                            <img class="img-fluid rounded-circle mb-3" src="picture/vincent.jpg" alt="..." />
-                            <h5>Audrey Dominique </h5>
-                            <p class="font-weight-light mb-0">"Bootstrap is amazing. I've been using it to create lots of super nice landing pages."</p>
+                            <img class="img-fluid rounded-circle mb-3" src="picture/stephen.jpg" alt="..." />
+                            <h5>Goh Wei An Stephen </h5>
+                            <p class="font-weight-light mb-0">stephengowa@gmail.com</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                            <img class="img-fluid rounded-circle mb-3" src="picture/vincent.jpg" alt="..." />
+                            <img class="img-fluid rounded-circle mb-3" src="picture/vince.jpg" alt="..." />
                             <h5>Lim Xin En Vera</h5>
                             <p class="font-weight-light mb-0">"Thanks so much for making these free resources available to us!"</p>
                         </div>
