--- a/page3.html
+++ b/page3.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link href="css/styles.css" rel="stylesheet"/>
     <link rel="stylesheet" type="text/css" href="screen.css">
-    
+ </head>   
 <body>
      <header class="masthead custom-bgpage3">
 
@@ -17,7 +17,7 @@
            <a href="index.html"> Home</a>
            <a href="page2.html"> Progress</a>
            <a href="page3.html">Team</a>
-           <a href="cadangan.html">Contact</a>
+           <a href="page4.html">Contact</a>
             </div>
             
             <div class="poppins-thick3 padding1" style="padding-top: 100px;">
