--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
            <a href="index.html"> Home</a>
            <a href="page2.html"> Progress</a>
            <a href="page3.html">Team</a>
-           <a href="cadangan.html">Contact</a>
+           <a href="page4.html">Contact</a>
             </div>
 
         <div class="poppins-thick padding1">
