--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" type="text/css" href="screen.css">
+    <link href="css/styles.css" rel="stylesheet"/>
 </head>
 
 <body>
@@ -63,6 +64,29 @@
             </div>
         
     </div>
+    <div class="row">
+                    <div class="col-lg-4">
+                        <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+                            <img class="img-fluid photo-page2" src="picture/mechanics.png" style="  padding-bottom: 40px;" />
+                            <h4 class="medium-poppins">Mechanics</h4>
+                            <p class="poppins-new" style="text-align:justify;">The mechanics group handles the physical parts of the robot. This includes tasks such as chasis design, trash collection system, and the mobility of the robot. This group also handles prototyping to testing. </p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+                            <img class="img-fluid photo-page2"src="picture/electronics.png" style=" padding-bottom: 40px;" />
+                            <h4 class="medium-poppins">Electronics</h4>
+                             <p class="poppins-new" style="text-align:justify;"> The electronics group handles the connection between software and hardware of the robot. This includes tasks such as, managing motor controls, ensuring power distribution, and designing circuit boards. </p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="features-icons-item mx-auto mb-0 mb-lg-3">
+                            <img class="img-fluid photo-page2" src="picture/software.png" style="   padding-bottom: 40px;" />
+                            <h4 class="medium-poppins">Software</h4>
+                             <p class="poppins-new" style="text-align:justify;">The software group handles the movements of the robot by programming its behavior using Arduino. This includes writing and debugging code to control the robot’s functions and integrating the software with the hardware.  </p>
+                        </div>
+                    </div>
+                </div>
 </body>
 
 </html>
