--- a/index.html
+++ b/index.html
@@ -36,57 +36,38 @@
 
     <div style= "background-color: #e5f6f7 ;display: flex;">
         <img src="picture/robot.jpg" style="width: 700px; height: 500px; padding-top: 80px; padding-left:80px; margin-bottom: 80px;" class="img_deg">      
-        <p class="poppins-new" style="margin-top: 200px; text-align: left; margin-left: 40px; font-size: 20px; text-align: justify-all;">
+        <p class="poppins-new" style="margin-top: 200px; text-align: left; padding-left: 80px; padding-right: 80px; font-size: 20px;">
             Sand-E is one of the project initiated by SUTD Organization of Autonomous Robots aims to create a machine that can clean the beach. The Sand-E robot is powered by lithium-polymer (LiPo) batteries that is a fully remote-controlledcprototype. 
         </p>
     </div>
-
-    <div style="background-color: white;">
-
-    <p class="poppins-thick" style="text-align: center;color: black;padding-top: 60px;"> Motivation</p>
-        <div class="poppins-new" style="font-size: 24px; ">
-            <div style="display: flex; justify-content: space-between; margin-top: 30px;" >
-                <p style="margin-left: 440px;"> Focus on Sustainability </p>
-                <p style="margin-right: 440px;">Reducing Physical Strength </p>
-                
-            </div>
-             <div style="display:flex; justify-content: space-between;" class="motivation-pictures">
-                  <img class ="sustainable-picture"src="picture/sustainable.png">
-                  <img class="robothand-picture" src="picture/robothand.png">
-
-             </div>
-            <div style="display:flex; justify-content: space-between;" class="motivation-margin">
-            <p style="font-size:20px; text-align:justify;padding-right: 200px ;">
-                The initiation of this project was to complement SUTD’s inherent culture and emphasis on sustainability,green initiatives and innovation. SAND-E is made mostly of recycled or 3D printed parts, excluding the electronics.</p>
-            <p style="font-size:20px; text-align: justify; padding-left: 200px;">
-                This project was taken up mainly to reduce the physical strain experienced by our cleaners everyday, by automating the process. Since SAND-E is still in its prototyping stage, it is not able to fully take over the roles and responsibilities of the cleaner but in due time, it will be able to clean the beach autonomously without the need for arduous labour.<br>
-            </p>
-            </div>
-        
-    </div>
-    <div class="row">
-                    <div class="col-lg-4">
+    <section class="features-icons text-center">
+            <div class="container">
+                <h1 class="big-poppins" style=" padding-bottom: 40px">Motivation Behind Sand-E </h1> 
+                <div class="row">
+                     <div class="col-lg-4">
                         <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-                            <img class="img-fluid photo-page2" src="picture/mechanics.png" style="  padding-bottom: 40px;" />
-                            <h4 class="medium-poppins">Mechanics</h4>
-                            <p class="poppins-new" style="text-align:justify;">The mechanics group handles the physical parts of the robot. This includes tasks such as chasis design, trash collection system, and the mobility of the robot. This group also handles prototyping to testing. </p>
+                            <img class="img-fluid photo-page2"src="picture/sustainable.png" style="padding-bottom: 40px;" />
+                            <h4 class="medium-poppins">Focus on Sustainability</h4>
+                             <p class="poppins-new" style="text-align:justify;"> The initiation of this project was to complement SUTD’s inherent culture and emphasis on sustainability. SAND-E is made mostly of recycled or 3D printed parts, excluding the electronics.</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-                            <img class="img-fluid photo-page2"src="picture/electronics.png" style=" padding-bottom: 40px;" />
-                            <h4 class="medium-poppins">Electronics</h4>
-                             <p class="poppins-new" style="text-align:justify;"> The electronics group handles the connection between software and hardware of the robot. This includes tasks such as, managing motor controls, ensuring power distribution, and designing circuit boards. </p>
+                            <img class="img-fluid photo-page2"src="picture/robothand.png" style="padding-bottom: 40px;" />
+                            <h4 class="medium-poppins">Reducing Physical Strength</h4>
+                             <p class="poppins-new" style="text-align:justify;">  This project was taken up to reduce the physical strain experienced by our cleaners everyday, by automating the process.</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="features-icons-item mx-auto mb-0 mb-lg-3">
-                            <img class="img-fluid photo-page2" src="picture/software.png" style="   padding-bottom: 40px;" />
-                            <h4 class="medium-poppins">Software</h4>
-                             <p class="poppins-new" style="text-align:justify;">The software group handles the movements of the robot by programming its behavior using Arduino. This includes writing and debugging code to control the robot’s functions and integrating the software with the hardware.  </p>
+                            <img class="img-fluid photo-page2" src="picture/lightbulb.png" style="padding-bottom: 40px;" />
+                            <h4 class="medium-poppins"> Desire to Always be Innovative</h4>
+                             <p class="poppins-new" style="text-align:justify;">This project is an evolution of the first prototype, driven by a strong desire to innovate </p>
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
 </body>
 
 </html>
