--- a/index.html
+++ b/index.html
@@ -12,27 +12,40 @@
     <link href="css/styles.css" rel="stylesheet"/>
 </head>
 
-<body>
-    <div class="custom-bg">
+<body class="d-flex flex-column h-100">
+    <main class="flex-shrink-0">
+     <!-- Navigation-->
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <div class="container px-5">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="page2.html">Progress</a></li>
+                            <li class="nav-item"><a class="nav-link" href="page3.html">Team</a></li>
+                            <li class="nav-item"><a class="nav-link" href="page4.html">Contact</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
 
-        <div class ="poppins-medium menu-setting" style="color: white;">
-           <a href="index.html"> Home</a>
-           <a href="page2.html"> Progress</a>
-           <a href="page3.html">Team</a>
-           <a href="page4.html">Contact</a>
-            </div>
-
-        <div class="poppins-thick padding1">
-            Beach Cleaning Robot Project <br>
-            by Freshmore Students SUTD
-            </div>
-
-        <div class="poppins-new padding1" style="color: white   ;">
-            This project combinines engineering creativity to create a machine to tackle <br>
-            environmental problems. Together, we're making a difference for a sustainable future.    
-            </div>
-    
-    </div>  
+   <header class="bg-dark py-5">
+                <div class="container px-5">
+                    <div class="row gx-5 align-items-center justify-content-center">
+                        <div class="col-lg-8 col-xl-7 col-xxl-6">
+                            <div class="my-5 text-center text-xl-start">
+                                <h1 class="display-5 fw-bolder text-white mb-2">A Bootstrap 5 template for modern businesses</h1>
+                                <p class="lead fw-normal text-white-50 mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit!</p>
+                                <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
+                                    <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#features">Get Started</a>
+                                    <a class="btn btn-outline-light btn-lg px-4" href="#!">Learn More</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"><img class="img-fluid rounded-3 my-5" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." /></div>
+                    </div>
+                </div>
+            </header>
 
     <div style= "background-color: #e5f6f7 ;display: flex;">
         <img src="picture/robot.jpg" style="width: 700px; height: 500px; padding-top: 80px; padding-left:80px; margin-bottom: 80px;" class="img_deg">      
@@ -68,6 +81,8 @@
                 </div>
             </div>
         </section>
+
+
 </body>
 
 </html>
