--- a/index.html
+++ b/index.html
@@ -10,25 +10,25 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" type="text/css" href="screen.css">
     <link href="css/styles.css" rel="stylesheet"/>
+    <link href="css/styles2.css" rel="stylesheet"/>
 </head>
 
 <body class="d-flex flex-column h-100">
     <main class="flex-shrink-0">
      <!-- Navigation-->
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container px-5">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="page2.html">Progress</a></li>
-                            <li class="nav-item"><a class="nav-link" href="page3.html">Team</a></li>
-                            <li class="nav-item"><a class="nav-link" href="page4.html">Contact</a></li>
+                            <li class="nav-item poppins-medium"><a class="nav-link poppins med" href="index.html">Home</a></li>
+                            <li class="nav-item poppins-medium"><a class="nav-link" href="page2.html"> Progress</a></li>
+                            <li class="nav-item poppins-medium"><a class="nav-link" href="page3.html">Team</a></li>
+                            <li class="nav-item poppins-medium"><a class="nav-link" href="page4.html">Contact</a></li>
                         </ul>
                     </div>
                 </div>
             </nav>
-
    <header class="bg-dark py-5">
                 <div class="container px-5">
                     <div class="row gx-5 align-items-center justify-content-center">
