--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" type="text/css" href="screen.css">
     <link href="css/styles.css" rel="stylesheet"/>
     <link href="css/styles2.css" rel="stylesheet"/>
+    <!-- Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+
 </head>
 
 <body class="d-flex flex-column h-100">
@@ -25,6 +27,7 @@
                             <li class="nav-item poppins-medium"><a class="nav-link" href="page2.html"> Progress</a></li>
                             <li class="nav-item poppins-medium"><a class="nav-link" href="page3.html">Team</a></li>
                             <li class="nav-item poppins-medium"><a class="nav-link" href="page4.html">Contact</a></li>
+                            <li class="nav-item dropdown">
                         </ul>
                     </div>
                 </div>
@@ -34,8 +37,8 @@
                     <div class="row gx-5 align-items-center justify-content-center">
                         <div class="col-lg-8 col-xl-7 col-xxl-6">
                             <div class="my-5 text-center text-xl-start">
-                                <h1 class="display-5 fw-bolder text-white mb-2">A Bootstrap 5 template for modern businesses</h1>
-                                <p class="lead fw-normal text-white-50 mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit!</p>
+                                <h1 class="display-5 fw-bolder text-white mb-2 poppins-thick">Beach Cleaning Robot Project by Freshmore From SUTD</h1>
+                                <p class="lead fw-normal text-white-50 mb-4 poppins-medium">This project combinines engineering creativity to create a machine to tackle environmental problems. Together, we're making a difference for a sustainable future. </p>
                                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
                                     <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#features">Get Started</a>
                                     <a class="btn btn-outline-light btn-lg px-4" href="#!">Learn More</a>
