--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                     <div class="row gx-5 align-items-center">
                         <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="picture/robot.jpg" alt="..." /></div>
                         <div class="col-lg-6">
-                            <h2 class="fw-bolder"> What is it?</h2>
-                            <p class="lead fw-normal text-muted mb-0"> Sand-E is one of the project initiated by SUTD Organization of Autonomous Robots aims to create a machine that can clean the beach. The Sand-E robot is powered by lithium-polymer (LiPo) batteries that is a fully remote-controlledcprototype.</p>
+                            <h2 class="fw-bolder poppins-new"> Introducing Sand-E !</h2>
+                            <p class="lead mb-0 poppins-medium"> Sand-E is one of the project initiated by SUTD Organization of Autonomous Robots aims to create a machine that can clean the beach. The Sand-E robot is powered by lithium-polymer (LiPo) batteries that is a fully remote-controlledcprototype.</p>
                         </div>
                     </div>
                 </div>
