--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                            <li class="nav-item poppins-medium"><a class="nav-link poppins med" href="index.html">Home</a></li>
-                            <li class="nav-item poppins-medium"><a class="nav-link" href="page2.html"> Progress</a></li>
-                            <li class="nav-item poppins-medium"><a class="nav-link" href="page3.html">Team</a></li>
-                            <li class="nav-item poppins-medium"><a class="nav-link" href="page4.html">Contact</a></li>
+                            <li class="nav-item poppins-new"><a class="nav-link poppins med" href="index.html">Home</a></li>
+                            <li class="nav-item poppins-new"><a class="nav-link" href="page2.html"> Progress</a></li>
+                            <li class="nav-item poppins-new"><a class="nav-link" href="page3.html">Team</a></li>
+                            <li class="nav-item poppins-new"><a class="nav-link" href="page4.html">Contact</a></li>
                             <li class="nav-item dropdown">
                         </ul>
                     </div>
@@ -52,8 +52,8 @@
                     <div class="row gx-5 align-items-center">
                         <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="picture/robot.jpg" alt="..." /></div>
                         <div class="col-lg-6">
-                            <h2 class="fw-bolder poppins-new"> Introducing Sand-E !</h2>
-                            <p class="lead mb-0 poppins-medium"> Sand-E is one of the project initiated by SUTD Organization of Autonomous Robots aims to create a machine that can clean the beach. The Sand-E robot is powered by lithium-polymer (LiPo) batteries that is a fully remote-controlledcprototype.</p>
+                            <h2 class="fw-bolder poppins-medium"> Introducing Sand-E !</h2>
+                            <p class="lead mb-0 poppins-new"> Sand-E is one of the project initiated by SUTD Organization of Autonomous Robots aims to create a machine that can clean the beach. The Sand-E robot is powered by lithium-polymer (LiPo) batteries that is a fully remote-controlledcprototype.</p>
                         </div>
                     </div>
                 </div>
@@ -66,21 +66,21 @@
                      <div class="col-lg-4">
                         <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
                             <img class="img-fluid photo-page2"src="picture/sustainable.png" style="padding-bottom: 40px;" />
-                            <h4 class="medium-poppins">Focus on Sustainability</h4>
+                            <h4 class="poppins-medium">Focus on Sustainability</h4>
                              <p class="poppins-new" style="text-align:justify;"> The initiation of this project was to complement SUTD’s inherent culture and emphasis on sustainability. SAND-E is made mostly of recycled or 3D printed parts, excluding the electronics.</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
                             <img class="img-fluid photo-page2"src="picture/robothand.png" style="padding-bottom: 40px;" />
-                            <h4 class="medium-poppins">Reducing Physical Strength</h4>
+                            <h4 class="poppins-medium">Reducing Physical Strength</h4>
                              <p class="poppins-new" style="text-align:justify;">  This project was taken up to reduce the physical strain experienced by our cleaners everyday, by automating the process.</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="features-icons-item mx-auto mb-0 mb-lg-3">
                             <img class="img-fluid photo-page2" src="picture/lightbulb.png" style="padding-bottom: 40px;" />
-                            <h4 class="medium-poppins"> Desire to Always be Innovative</h4>
+                            <h4 class="poppins-medium"> Desire to Always be Innovative</h4>
                              <p class="poppins-new" style="text-align:justify;">This project is an evolution of the first prototype, driven by a strong desire to innovate </p>
                         </div>
                     </div>
