--- a/page2.html
+++ b/page2.html
@@ -13,23 +13,56 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" type="text/css" href="screen.css   ">
     <link href="css/styles.css" rel="stylesheet"/>
+    <!-- Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     
     
 </head>
 
-<body>
-    <div class="custom-bg1">
-         <div class ="poppins-medium menu-spacing" style="padding-top: 40px; padding-right:80px ; text-align: right; color: black";>
-           <a href="index.html"> Home</a>
-           <a href="page2.html"> Progress</a>
-           <a href="page3.html">Team</a>
-           <a href="page4.html">Contact</a>
-            </div>
-        <div class="poppins-thick1">
-            The Process of Building <br>
-            and Developing Sand-E
-            </div>
+<body class="d-flex flex-column h-100">
+      <!-- Navigation-->
+        <div class="custom-bg1">
+        <nav class="navbar navbar-expand-lg navbar-dark">
+                <div class="container px-5">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
+                            <li class="nav-item poppins-new black"><a class="nav-link poppins med" href="index.html">Home</a></li>
+                            <li class="nav-item poppins-new black"><a class="nav-link" href="page2.html"> Progress</a></li>
+                            <li class="nav-item poppins-new black"><a class="nav-link" href="page3.html">Team</a></li>
+                            <li class="nav-item poppins-new black"><a class="nav-link" href="page4.html">Contact</a></li>
+                            <li class="nav-item dropdown">
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        <header class="py-5">
+                <div class="container px-5">
+                    <div class="row gx-5 align-items-center justify-content-center">
+                        <div class="col-lg-8 col-xl-7 col-xxl-6">
+                            <div class="my-5 text-center text-xl-start">
+                                <h1 class="display-5 fw-bolder text-white mb-2 poppins-thick black">Beach Cleaning Robot Project by Freshmore From SUTD</h1>
+                                <p class="lead fw-normal text-white-50 mb-4 poppins-medium black">This project combinines engineering creativity to create a machine to tackle environmental problems. Together, we're making a difference for a sustainable future. </p>
+                            </div>
+                        </div>
+                        <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"></div>
+                    </div>
+                </div>
     </div>
+            </header>
+        <div style="background-color :#e5f6f7;">
+         <section class="py-5" id="scroll-target">
+                <div class="container px-5 my-5">
+                    <div class="row gx-5 align-items-center">
+                        <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="picture/robot.jpg" alt="..." /></div>
+                        <div class="col-lg-6">
+                            <h2 class="fw-bolder poppins-medium"> Introducing Sand-E !</h2>
+                            <p class="lead mb-0 poppins-new"> Sand-E is one of the project initiated by SUTD Organization of Autonomous Robots aims to create a machine that can clean the beach. The Sand-E robot is powered by lithium-polymer (LiPo) batteries that is a fully remote-controlledcprototype.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </section>
     <div style=" background-color: white;display: flex;">   
         <img src="picture/old robot.jpg" class="photo-size"style="width: 700px; height: 500px; padding-top: 80px; padding-left:80px;margin-bottom: 80px";>
         <p class="poppins-new" style="margin-top: 200px; text-align: left; margin-left: 80px; font-size: 20px;">
