--- a/page2.html
+++ b/page2.html
@@ -41,8 +41,8 @@
                     <div class="row gx-5 align-items-center justify-content-center">
                         <div class="col-lg-8 col-xl-7 col-xxl-6">
                             <div class="my-5 text-center text-xl-start">
-                                <h1 class="display-5 fw-bolder text-white mb-2 poppins-thick black">Beach Cleaning Robot Project by Freshmore From SUTD</h1>
-                                <p class="lead fw-normal text-white-50 mb-4 poppins-medium black">This project combinines engineering creativity to create a machine to tackle environmental problems. Together, we're making a difference for a sustainable future. </p>
+                                <h1 class="display-5 fw-bolder mb-2 poppins-thick black">Beach Cleaning Robot Project by Freshmore From SUTD</h1>
+                                <p class="lead fw-normal mb-4 poppins-medium black">This project combinines engineering creativity to create a machine to tackle environmental problems. Together, we're making a difference for a sustainable future. </p>
                             </div>
                         </div>
                         <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"></div>
