--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="picture/robot.jpg" alt="..." /></div>
                         <div class="col-lg-6">
                             <h2 class="fw-bolder poppins-medium"> Introducing Sand-E !</h2>
-                            <p class="lead mb-0 poppins-new"> Sand-E is one of the project initiated by SUTD Organization of Autonomous Robots aims to create a machine that can clean the beach. The Sand-E robot is powered by lithium-polymer (LiPo) batteries that is a fully remote-controlledcprototype.</p>
+                            <p class="mb-0 poppins-new"> Sand-E is one of the project initiated by SUTD Organization of Autonomous Robots aims to create a machine that can clean the beach. The Sand-E robot is powered by lithium-polymer (LiPo) batteries that is a fully remote-controlledcprototype.</p>
                         </div>
                     </div>
                 </div>
@@ -66,7 +66,7 @@
                      <div class="col-lg-4">
                         <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
                             <img class="img-fluid photo-page2"src="picture/sustainable.png" style="padding-bottom: 40px;" />
-                            <h4 class="poppins-medium">Focus on Sustainability</h4>
+                            <h4 class="poppins-medium">Focusing on Sustainability</h4>
                              <p class="poppins-new" style="text-align:justify;"> The initiation of this project was to complement SUTD’s inherent culture and emphasis on sustainability. SAND-E is made mostly of recycled or 3D printed parts, excluding the electronics.</p>
                         </div>
                     </div>
