--- a/page2.html
+++ b/page2.html
@@ -20,6 +20,7 @@
 </head>
 
 <body class="d-flex flex-column h-100">
+     <main class="flex-shrink-0">
       <!-- Navigation-->
         <div class="custom-bg1">
         <nav class="navbar navbar-expand-lg navbar-dark">
@@ -50,28 +51,19 @@
                 </div>
     </div>
             </header>
-        <div style="background-color :#e5f6f7;">
+   <div style="background-color :white;">
          <section class="py-5" id="scroll-target">
                 <div class="container px-5 my-5">
                     <div class="row gx-5 align-items-center">
-                        <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="picture/robot.jpg" alt="..." /></div>
+                        <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="picture/old robot.jpg" alt="..." /></div>
                         <div class="col-lg-6">
-                            <h2 class="fw-bolder poppins-medium"> Introducing Sand-E !</h2>
-                            <p class="lead mb-0 poppins-new"> Sand-E is one of the project initiated by SUTD Organization of Autonomous Robots aims to create a machine that can clean the beach. The Sand-E robot is powered by lithium-polymer (LiPo) batteries that is a fully remote-controlledcprototype.</p>
+                            <h2 class="fw-bolder poppins-medium"> Previous Model</h2>
+                            <p class="mb-0 poppins-new"> Initially, the robot's mechanics utilized the same rake system with smaller sizes. For the trash collection system, a scoop was used to scrape trash from the sand. Additionally, the robot was not controlled via a controller but operated manually by being pushed. </p>
                         </div>
                     </div>
                 </div>
             </div>
             </section>
-    <div style=" background-color: white;display: flex;">   
-        <img src="picture/old robot.jpg" class="photo-size"style="width: 700px; height: 500px; padding-top: 80px; padding-left:80px;margin-bottom: 80px";>
-        <p class="poppins-new" style="margin-top: 200px; text-align: left; margin-left: 80px; font-size: 20px;">
-            initial bot, can elaborate more about the details and how it functions  <br>
-            of Autonomous Robots aims to create a machine that can clean <br>
-            the beach. The Sand-E robot is powered by lithium-polymer (LiPo) <br>
-            batteries that is a fully remote-controlledcprototype.
-        </p> 
-    </div>
 
     <div style="background-color:#e5f6f7 ">
             <section class="features-icons text-center">
